--- a/public/stylesheets/finance/master_category_particulars.css
+++ b/public/stylesheets/finance/master_category_particulars.css
@@ -164,6 +164,31 @@
     padding-top:3px;
     width:600px;
 }
+.each_category{
+    font-size: 12px;
+    overflow:auto;
+    width:auto;
+
+}
+.each_category input{
+    float:left;
+    width:auto;
+}
+
+.each_category label {
+    float: right;
+    margin-left: 22px;
+    margin-top: -26px;
+    width: 178px;
+}
+.categories {
+    height: 100px;
+    overflow: auto;
+    max-width: 220px;
+    float: left;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 .sel-list {
     margin-bottom:2px;
     width:200px;
