--- a/app/views/finance/report_compare.html.erb
+++ b/app/views/finance/report_compare.html.erb
@@ -121,9 +121,9 @@
     <td class="col-2"><%= t('grand_total') %></td>
     <% if @grand_total >= 0 %>
       <td></td>
-      <td class="col-3" align="right"><%= @grand_total%></td>
+      <td class="col-3" align="right"><%= sprintf("%.2f",@grand_total)%></td>
     <% else %>
-      <td class="col-3" align="right"><%= @grand_total*-1%></td>
+      <td class="col-3" align="right"><%= sprintf("%.2f",@grand_total * -1)%></td>
       <td></td>
     <% end %>
     <td class="col-3">  </td>
@@ -218,9 +218,9 @@
     <td class="col-2"><%= t('grand_total') %></td>
     <% if @grand_total2 >= 0 %>
       <td></td>
-      <td class="col-3" align="right"><%= @grand_total2%></td>
+      <td class="col-3" align="right"><%= sprintf("%.2f",@grand_total2)%></td>
     <% else %>
-      <td class="col-3" align="right"><%= @grand_total2 * -1%></td>
+      <td class="col-3" align="right"><%= sprintf("%.2f",@grand_total2 * -1)%></td>
       <td></td>
     <% end %>
     <td class="col-3">  </td>
