--- a/app/views/employee_attendance/leave_history.erb
+++ b/app/views/employee_attendance/leave_history.erb
@@ -38,11 +38,11 @@
     <% remote_form_for :period ,:url=>{:action=>'update_leave_history', :id=>@employee.id}do |f| %>
       <div class="label-field-pair">
         <label for="reason"><%= t('start_date') %></label>
-        <div class="text-input-bg"><%= calendar_date_select_tag 'period[start_date]', I18n.l(1.month.ago.to_date,:format=>:normal) %></div>
+        <div class="text-input-bg"><%= calendar_date_select_tag 'period[start_date]', I18n.l(1.month.ago.to_date,:format=>:default) %></div>
       </div>
       <div class="label-field-pair">
         <label for="reason"><%= t('end_date') %></label>
-        <div class="text-input-bg"><%= calendar_date_select_tag 'period[end_date]', I18n.l(Date.today,:format=>:normal) %></div>
+        <div class="text-input-bg"><%= calendar_date_select_tag 'period[end_date]', I18n.l(Date.today,:format=>:default) %></div>
       </div>
       <div id="submit-button">
         <%=  submit_tag "►#{t('go')}",:class=>'submit_button' %>
