--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -123,6 +123,12 @@
           <%= check_box :configuration, :employee_number_auto_increment, :checked => false %><%= t('employee_admission_auto') %>
         <% end %>
       <% end %>
+      <br/>
+      <% if @config[:enable_news_comment_moderation] == '1' %>
+        <%= check_box :configuration, :enable_news_comment_moderation, :checked => true %><%= "Enable News Comment Moderation" %>
+      <% else %>
+        <%= check_box :configuration, :enable_news_comment_moderation, :checked => false %><%=  "Enable News  Comment Moderation" %>
+      <% end %>
       <div id="submit-button">
         <%= submit_tag "► #{t('update')}" %>
       </div>
