Style issue in fee particular create form
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2583 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/master_fees.css
+++ b/public/stylesheets/finance/master_fees.css
@@ -168,7 +168,7 @@
 .each_category{
     font-size: 12px;
     overflow:auto;
-    width:auto;
+    width:213px;;
 
 }
 .each_category input{
@@ -178,8 +178,7 @@
 
 .each_category label {
     float: right;
-    margin-left: 15px;
-    margin-top: -6px;
+    margin-top: -7px;
     width: 178px;
 }
 .categories {
