parent login added
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2611 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -76,7 +76,7 @@
       </div>
     <% end %>
 
-  <% elsif @user.student? %>
+  <% elsif @user.student? or @user.parent?%>
 
      <div class="button-box">
       <%= link_to "<div class ='button-label'><p>#{t('my_profile')}</p></div>", {:controller => "student", :action => "profile", :id => @student.id},
