--- a/app/views/exam/generated_report4.html.erb
+++ b/app/views/exam/generated_report4.html.erb
@@ -39,7 +39,7 @@
     <h4 align="center"><%= @student.batch.name %> - <%= @student.batch.course.full_name %></h4>
     <div id="register">
       <% this_user = User.find(session[:user_id]) if session[:user_id] %>
-      <% unless this_user.student? %>
+      <% unless this_user.student? or this_user.parent? %>
         <div class="header">
           <div class="prev">
             <%= link_to '◄',:action=>'generated_report4',:student=>@student.previous_student, :type=> @type %>
