style issue in particular
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2617 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/master_fees.css
+++ b/public/stylesheets/finance/master_fees.css
@@ -177,9 +177,12 @@
 }
 
 .each_category label {
-    float: right;
+    float: left;
     margin-top: -7px;
     width: 178px;
+    font-size:13px;
+    font-weight: normal;
+    margin-left: 8px;
 }
 .categories {
     height: 100px;
