added permission check to student profile more ui
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2618 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/profile.erb
+++ b/app/views/student/profile.erb
@@ -55,7 +55,9 @@
           <li><%= link_to "#{t('fees_text')}", :controller => 'student',:action => 'fees', :id => @student.id %></li>
         <% end %>
         <% FedenaPlugin::ADDITIONAL_LINKS[:student_profile_more_menu].each do |mod| %>
-          <li><%= link_to "#{t(mod[:title])}",mod[:destination].merge(:id=>@student.id) %></li>
+          <% if permitted_to? "#{mod[:destination][:action]}".to_sym,"#{mod[:destination][:controller]}".to_sym  %>
+            <li><%= link_to "#{t(mod[:title])}",mod[:destination].merge(:id=>@student.id) %></li>
+          <% end %>
         <% end %>
       </ul>
     </li>
