--- a/app/views/news/_comment.erb
+++ b/app/views/news/_comment.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<% if @config.config_value == '1' %>
+<% if @config && @config.config_value == '1' %>
   <% is_author = (@current_user == @cmnt.author) %>
   <% if is_author || @is_moderator  || @cmnt.is_approved%>
     <li id="comment-item-<%= @cmnt.id %>">
