--- a/app/views/timetable/_employee_timetable.erb
+++ b/app/views/timetable/_employee_timetable.erb
@@ -30,10 +30,10 @@
                     <%= formatted_timetable_cell(tte)  -%>
                   <% else %>
                     <%= @electives[tte.subject.elective_group_id].first.code %>
-                  <div>
+                  <% end %>
+                  <div class="batch_name">
                     <%= timetable_batch (@timetable_entries[weekday.id][ct.id])  -%>
                   </div>
-                  <% end %>
                 <% end -%>
               </td>
             <% end -%>
