sms module configuration removed, success code introduced, file not found message introduced
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2714 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam_groups/index.html.erb
+++ b/app/views/exam_groups/index.html.erb
@@ -84,7 +84,7 @@
                     :success => "Element.hide('loader')")  %>
                 <% else  %>
                   <%  unless  exam_group.result_published  %>
-                    <%= t('schedule_published') %><% if @config.include?('SMS') %>
+                    <%= t('schedule_published') %><% if @sms_setting.application_sms_active and @sms_setting.exam_result_schedule_sms_active %>
                       <%= link_to_remote "#{t('resend')}",:url=>{:controller=>'exam',:action=>'publish',:id=>exam_group.id,:status=>"schedule"},
                         :before => "Element.show('loader')",
                         :success => "Element.hide('loader')"  %> <%= t('sms_notification') %>.<br />
@@ -93,7 +93,7 @@
                       :before => "Element.show('loader')",
                       :success => "Element.hide('loader')")  %>
                   <% else %>
-                    <%= t('result_published') %>. <% if @config.include?('SMS') %>
+                    <%= t('result_published') %>. <% if @sms_setting.application_sms_active and @sms_setting.exam_result_schedule_sms_active %>
                       <%= link_to_remote "#{t('resend_sms_notification')}",:url=>{:controller=>'exam',:action=>'publish',:id=>exam_group.id,:status=>"result"},
                         :before => "Element.show('loader')",
                         :success => "Element.hide('loader')"  %>
