--- a/app/views/additional_exam_groups/index.html.erb
+++ b/app/views/additional_exam_groups/index.html.erb
@@ -73,7 +73,7 @@
               <% else  %>
                 <%  unless  exam_group.result_published  %>
                   <%= t('schedule_published') %>
-                  <% if @config.include?('SMS') %>
+                  <% if @sms_setting.application_sms_active and @sms_setting.exam_result_schedule_sms_active %>
                     <%= link_to_remote "#{t('resend')}",:url=>{:controller=>'additional_exam',:action=>'publish',:id=>exam_group.id,:status=>"schedule"},
                       :before => "Element.show('loader')",
                       :success => "Element.hide('loader')"  %>  <%= t('sms_notification') %>.<br />
@@ -82,7 +82,7 @@
                     :before => "Element.show('loader')",
                     :success => "Element.hide('loader')")  %>
                 <% else %>
-                  <%= t('result_published') %>. <% if @config.include?('SMS') %>
+                  <%= t('result_published') %>. <% if @sms_setting.application_sms_active and @sms_setting.exam_result_schedule_sms_active %>
                     <%= link_to_remote "#{t('resend_sms_notification')}",:url=>{:controller=>'additional_exam',:action=>'publish',:id=>exam_group.id,:status=>"result"},
                       :before => "Element.show('loader')",
                       :success => "Element.hide('loader')"  %>
