--- a/app/views/timetable/teachers_timetable.html.erb
+++ b/app/views/timetable/teachers_timetable.html.erb
@@ -41,7 +41,7 @@
         :style =>"display: none;" ) %>
       <div class="text-input-bg">
         <%= select :timetable_entry, :timetable_id, @timetables.map {|c| ["#{c.start_date.strftime("%d %b %Y")} - #{c.end_date.strftime("%d %b %Y")}", c.id]},
-          {:selected => @current.id, :prompt => t('select_a_tte')},
+          {:selected => @current.try(:id), :prompt => t('select_a_tte')},
           {:onChange => "#{remote_function(:url => {:action => "update_teacher_tt"}, :with => "'timetable_id='+value",       :before => "Element.show('loader')",
           :success => "Element.hide('loader')")}"} %>
       </div>
@@ -50,8 +50,8 @@
 
 
   <div id="timetable_view">
-    <% if @current.present? %>
+    <%# if @current.present? %>
       <%= render :partial=>"teacher_timetable" %>
-    <% end %>
+    <%# end %>
   </div>
 </div>
