--- a/app/views/reminder/index.erb
+++ b/app/views/reminder/index.erb
@@ -38,9 +38,6 @@
   </ul>
 </div>
 
-
-
-
 <div id="page-yield">
 
   <% unless flash[:notice].nil? %>
@@ -48,58 +45,117 @@
   <% end %>
 
 
-
   <div id="application-list">
-    <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
-      <tr class="tr-head">
-        <td>
-          <%= t('from') %>
-        </td>
-        <td>
-          <%= t('subject') %>
-        </td>
-        <td>
-          <%= t('date_text') %>
-        </td>
-      </tr>
-      <tr class="tr-blank"></tr>
+    <% form_for :reminder, :url=>{:controller=>'reminder', :action=>'reminder_actions' } do |f| %>
+      <%= hidden_field_tag :page, (params[:page].nil? ? 1 : params[:page]) %>
+      <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
+        <tr class="tr-select">
+          <td colspan="4" class="text-input-bg">
+            <%= select :reminder, :action, [["#{t('delete')}", 'delete'],["#{t('mark_as_unread')}",'unread'],["#{t('mark_as_read')}",'read']], {:prompt => t('select_an_action')} , {:onChange => 'if(this.value==\'delete\'){if(confirm(\'Are you sure?\')){this.form.submit()}}else{this.form.submit()}'}  %>
+          </td>
+        </tr>
+        <tr class="tr-head">
+          <td class="col-8"><%= check_box_tag "check_all", nil, false, {:class=>'check_all' } %></td>
+          <td>
+            <%= t('from') %>
+          </td>
+          <td>
+            <%= t('subject') %>
+          </td>
+          <td>
+            <%= t('date_text') %>
+          </td>
+        </tr>
+        <tr class="tr-blank"></tr>
 
 
-      <% @reminders.each do |ur| %>
-        <% if ur.is_read %>
-          <% sender_user = ur.user  %>
-          <tr class="tr-read-<%= cycle('odd', 'even') %>">
-            <% unless sender_user.nil? %>
-              <td class="col-3"><%= link_to "#{sender_user.first_name}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
-            <% else %>
-              <td class="col-3"><%= link_to "#{t('user_unavailable')}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
-            <% end %>
-            <td class="col-3"><%= link_to "#{ur.subject}",  :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
-            <td class="col-1"><%= link_to "#{ur.created_at.strftime("%d-%m-%Y")}",  :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
-
-          </tr>
-
-        <% else %>
-
-
-
-          <% sender_user = ur.user  %>
-          <tr class="tr-<%= cycle('odd', 'even') %>">
-            <% unless sender_user.nil? %>
-              <td class="col-3"><%= link_to "#{sender_user.first_name}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
-            <% else %>
-              <td class="col-3"><%= link_to "#{t('user_unavailable')}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
-            <% end %>
-            <td class="col-2"><%= link_to "#{ur.subject}",  :controller=>"reminder", :action=>"view_reminder",  :id2=>ur.id %></td>
-            <td class="col-1"><%= link_to "#{ur.created_at.strftime("%d-%m-%Y")}",  :controller=>"reminder", :action=>"view_reminder", :id2=>ur.id %></td>
-          </tr>
+        <% @reminders.each do |ur| %>
+          <% if ur.is_read %>
+            <% sender_user = ur.user  %>
+            <tr class="tr-read-<%= cycle('odd', 'even') %>">
+              <td class="col-8"><%= check_box_tag "message_ids[]", ur.id, false, {:class=>'message_check' } %></td>
+              <% unless sender_user.nil? %>
+                <td class="col-4"><%= link_to "#{sender_user.first_name}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+              <% else %>
+                <td class="col-4"><%= link_to "#{t('user_unavailable')}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+              <% end %>
+              <td class="col-2"><%= link_to "#{ur.subject}",  :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+              <td class="col-1"><%= link_to "#{ur.created_at.strftime("%d-%m-%Y")}",  :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+            </tr>
+          <% else %>
+            <% sender_user = ur.user  %>
+            <tr class="tr-<%= cycle('odd', 'even') %>">
+              <td class="col-8"><%= check_box_tag "message_ids[]", ur.id, false, {:class=>'message_check' } %></td>
+              <% unless sender_user.nil? %>
+                <td class="col-4"><%= link_to "#{sender_user.first_name}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+              <% else %>
+                <td class="col-4"><%= link_to "#{t('user_unavailable')}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+              <% end %>
+              <td class="col-2"><%= link_to "#{ur.subject}",  :controller=>"reminder", :action=>"view_reminder",  :id2=>ur.id %></td>
+              <td class="col-1"><%= link_to "#{ur.created_at.strftime("%d-%m-%Y")}",  :controller=>"reminder", :action=>"view_reminder", :id2=>ur.id %></td>
+            </tr>
+          <% end %>
         <% end %>
-      <% end %>
-    </table>
+      </table>
+      <script type="text/javascript">
+        $$('.message_check').invoke('observe','click',function() {
+          if(this.checked == false){
+            $$('.check_all').first().checked = false
+            $(this).up('tr').removeClassName('active')
+          }
+          else{
+            $(this).up('tr').addClassName('active')
+          }
+
+        });
+        $$('.check_all').invoke('observe','click',function() {
+          field_value = this.checked
+          $$('.message_check').each(function(check){
+            check.checked = field_value;
+            if(check.checked == false){
+              $(check).up('tr').removeClassName('active')
+            }
+            else{
+              $(check).up('tr').addClassName('active')
+            }
+          })
+        });
+        $('application-list').observe('click', function (e)
+        {
+          var origin = e.element();
+          if (!origin) return;
+          if (!origin.nodeName) return;
+          if (origin.nodeName.toLowerCase() === 'input') {
+            if (e.shiftKey) {
+              var checkBoxes = $$('.message_check');
+              var last = checkBoxes.indexOf(lastSelected);
+              var first = checkBoxes.indexOf(origin);
+              if (-1 == last) {
+                lastSelected = origin;
+                return;
+              }
+
+              var start = Math.min(first, last);
+              var end = Math.max(first, last);
+
+              var chk = lastSelected.checked;
+              for (var i = start; i < end; ++i) {
+                checkBoxes[i].checked = chk;
+                if(chk == false){
+                  checkBoxes[i].up('tr').removeClassName('active')
+                }
+                else{
+                  checkBoxes[i].up('tr').addClassName('active')
+                }
+              }
+            } else {
+              lastSelected = origin;
+            }
+          }
+        });
+      </script>
+    <% end %>
     <%= will_paginate @reminders %>
-
-
-
-
   </div>
+
 </div>
